data/derived/comb/progs/unify/prog7602.ml.out
Characters 137-138:
  let seen' = if List.mem h t then h else h@t in
                                            ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
